test/errors/future_import_unknown.py
from __future__ import does_not_exist
