test/errors/future_import_unknown.py.expected
test/errors/future_import_unknown.py:1 error: future feature does_not_exist is not defined
